changed product-category property from flex to gridbox, trying to solve bug on mobile browsers

--- a/css/styles.css
+++ b/css/styles.css
@@ -289,18 +289,17 @@ body {
 }
 
 .product-category {
-    /* position: relative; */
+    position: relative;
     min-width: 312px;
     min-height: 360px;
     background-color: lightblue;
     background-size: cover;
     background-position: center;
-    /* 
-    display: flex;
 
+    display: grid;
+    grid-template-columns: auto minmax(44px, auto);
     align-items: end;
-    justify-content: space-around; */
-
+    justify-content: space-around;
     text-decoration: none;
 }
 
@@ -323,7 +322,7 @@ body {
     background-image: url("/images/explorer-jacket-img.jpg");
 }
 
-/* .product-category::after {
+.product-category::after {
     content: "";
     position: absolute;
     left: 0;
@@ -332,7 +331,7 @@ body {
     bottom: 0;
     background: rgb(226, 218, 172);
     background: linear-gradient(180deg, rgba(226, 218, 172, 0) 0%, rgba(171, 164, 130, 0.41) 35%, rgba(91, 88, 69, 0.69) 69%, rgba(0, 0, 0, 1) 100%);
-} */
+}
 
 .product-category > * {
     z-index: 1;
